--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>Giltzapp</title>
   <link rel="manifest" href="manifest.json">
+  <base href="/">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
